# go-blockchain

./: .gitignore  CLAUDE.md  README.md  actions.go  actions_coverage_test.go  actions_integration_test.go  actions_test.go  cmd_deploy_itns.go  cmd_explorer.go  cmd_serve.go  cmd_status.go  cmd_sync.go  cmd_wallet.go  commands.go  commands_test.go  constants.go  dns_test.go  entitlement.go  events.go  events_test.go  forge.go  go.mod  go.sum  go.work  hf_monitor.go  hf_monitor_test.go  service.go  service_process.go  service_test.go  sync_service.go  variant.go
.core/: build.yaml
.forgejo/workflows/: test.yml
chain/: alias.go  alias_test.go  blockdata.go  blockdata_test.go  chain.go  chain_test.go  difficulty.go  difficulty_test.go  genesis.go  genesis_test.go  history.go  history_test.go  index.go  integration_test.go  levinconn.go  meta.go  p2psync.go  p2psync_test.go  ring.go  ring_test.go  store.go  sync.go  sync_test.go  validate.go  validate_test.go
cmd/chain/: main.go
cmd/core-chain/: main.go
config/: config.go  config_test.go  file.go  hardfork.go  hardfork_activation_test.go  hardfork_test.go
consensus/: block.go  block_test.go  doc.go  errors.go  errors_test.go  fee.go  fee_test.go  freeze_test.go  integration_test.go  pow.go  pow_test.go  reward.go  reward_test.go  tx.go  tx_test.go  tx_version_test.go  v2sig.go  v2sig_test.go  verify.go  verify_crypto_test.go  verify_test.go
crypto/: CMakeLists.txt  PROVENANCE.md  bridge.cpp  bridge.h  clsag.go  crypto.go  crypto_test.go  doc.go  keygen.go  keyimage.go  pow.go  pow_test.go  proof.go  signature.go
crypto/compat/: auto_val_init.h  warnings.h
crypto/compat/common/: crypto_stream_operators.h
crypto/randomx/: aes_hash.cpp  jit_compiler_rv64.cpp  jit_compiler_rv64.hpp  jit_compiler_rv64_vector_static.S  jit_compiler_rv64_vector_static.h  randomx.cpp  soft_aes.cpp  soft_aes.h  vm_compiled.cpp
daemon/: http_handlers.go  server.go  server_integration_test.go  server_test.go  wallet_rpc.go  wallet_rpc_test.go
difficulty/: difficulty.go  difficulty_test.go
docs/: RFC.md  architecture.md  cryptography.md  development.md  history.md  index.md  networking.md  parameters.md  quickstart.md  rpc.md
docs/plans/: 2026-02-20-chain-storage-design.md  2026-02-20-crypto-bridge-design.md  2026-02-20-p2p-levin-design.md  2026-02-20-p2p-levin-plan.md  2026-02-20-wallet-core-design.md  2026-02-21-block-sync-design.md  2026-02-21-consensus-rules-design.md  2026-02-21-consensus-rules-plan.md  2026-02-21-mining-design.md  2026-02-21-v2-tx-serialisation-design.md  2026-02-21-v2-tx-serialisation-plan.md  2026-02-22-blockchain-tui-design.md
docs/plans/completed/: 2026-02-20-chain-storage-plan.md  2026-02-20-crypto-bridge-plan.md  2026-02-20-rpc-client-design.md  2026-02-20-rpc-client-plan.md  2026-02-20-wallet-core-plan.md  2026-02-21-block-sync-plan.md  2026-02-21-difficulty-computation-design.md  2026-02-21-difficulty-computation-plan.md  2026-02-21-mining-plan.md
docs/superpowers/plans/: 2026-03-16-hf1-transaction-types.md  2026-03-16-hf3-block-version.md  2026-03-16-hf5-confidential-assets.md  2026-03-16-hf6-block-time-halving.md
docs/superpowers/specs/: 2026-03-16-hf1-transaction-types-design.md  2026-03-16-hf3-block-version-design.md  2026-03-16-hf5-confidential-assets-design.md  2026-03-16-hf6-block-time-halving-design.md
go/: cmd_status.go  cmd_wallet.go  commands_test.go  dns.go  entitlement_test.go  forge_test.go  go.mod  go.sum  metrics.go  metrics_test.go
go/chain/: alias.go  chain_test.go  difficulty.go  difficulty_test.go  integration_test.go  levinconn.go  levinconn_test.go  meta.go  store.go  store_test.go  sync_test.go
go/cmd/core-chain/: main.go
go/config/: config_test.go  file_test.go  hardfork.go
go/consensus/: block.go  block_test.go  errors_test.go  freeze_test.go  integration_test.go  reward_test.go  tx_test.go  tx_version_test.go  v2sig.go  v2sig_test.go
go/crypto/: crypto_test.go  keyimage.go  pow_test.go
go/crypto/common/: crypto_stream_operators.h
go/crypto/compat/: include_base_utils.h
go/crypto/upstream/: crypto-sugar.h  (+1 more)
go/daemon/: README.md  coverage_test.go  server_integration_test.go
go/difficulty/: difficulty.go
go/hsd/: client.go  doc.go
go/mining/: hash.go  hash_test.go  integration_test.go
go/p2p/: relay.go  relay_test.go  sync_test.go  timedsync.go
go/rpc/: client.go  info.go  transactions.go
go/wallet/: account_test.go  chain_scanner.go  ring.go  scanner.go  signer.go  wallet.go  wallet_test.go  wordlist.go
go/wire/: block.go  decoder_test.go  hash_test.go  transaction_test.go  treehash.go  varint_test.go
hsd/: client_test.go
locales/en/: blockchain.json
mining/: hash.go  hash_test.go  integration_test.go  miner.go  miner_test.go
p2p/: commands.go  encode.go  handshake.go  handshake_test.go  integration_test.go  ping.go  ping_test.go  relay.go  relay_test.go  sync.go  sync_test.go  timedsync.go
rpc/: assets.go  blocks.go  blocks_test.go  client.go  client_test.go  info.go  info_test.go  integration_test.go  mining.go  mining_test.go  test_helpers_test.go  transactions.go  transactions_test.go  types.go  wallet.go  wallet_test.go
testdata/: README  v2_spending_tx_mixin0.hex  v2_spending_tx_mixin10.hex
tui/: explorer_model.go  explorer_model_test.go  keyhints_model.go  keyhints_model_test.go  messages.go  node.go  node_test.go  status_model.go  status_model_test.go
types/: address.go  address_test.go  block.go  transaction.go  transaction_test.go  types.go  types_test.go
wallet/: account.go  account_test.go  builder.go  builder_test.go  chain_scanner_test.go  extra.go  extra_test.go  integration_test.go  mnemonic.go  mnemonic_test.go  ring.go  ring_test.go  scanner.go  scanner_test.go  signer.go  signer_test.go  transfer.go  transfer_test.go  wallet.go  wallet_test.go  wordlist.go
wire/: block.go  block_test.go  decoder.go  decoder_test.go  encoder.go  encoder_test.go  hash.go  hash_test.go  transaction.go  transaction_test.go  transaction_v2_test.go  transaction_v3_test.go  treehash.go  treehash_test.go  varint.go  varint_test.go
(+9 files in other folders)
